<?xml version="1.0"?>
<package format="2">
  <name>morpheus_chair_pkg</name>
  <version>0.0.0</version>
  <description>The morpheus_chair_pkg package</description>

  <maintainer email="rdaneel@todo.todo">rdaneel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>raspicam_node</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
